--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-<h1>hannah shaw</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+
+    <title>Hannah Shaw</title>
+</head>
+
+<body>
+        <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4" href="index.html">HANNAH SHAW</h1>
+                  <p class="lead"></p>
+                  <a
+                    class="info-btn btn btn-primary btn-md"
+                    href="contact.html"
+                    role="button"
+                    >CONTACT</a
+                  >
+                  <a
+                    class="info-btn btn btn-primary btn-md"
+                    href="portfolio.html"
+                    role="button"
+                    >PORTFOLIO</a
+                  >
+                  <a
+                    class="info-btn btn btn-primary btn-md"
+                    href="index.html"
+                    role="button"
+                    >ABOUT</a
+                  >
+                </div>
+              </div> 
+
+    <h1>About Me</h1>
+    <hr>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="coffee_shop.jpg" class="img-fluid" alt="responsive-image">
+            </div>
+            <div class="col-6">
+                <p>I'm Hannah and I live in Raleigh, NC. I graduated from the University of North Carolina at Chapel
+                    Hill in 2016. I earned a Bachelor of Arts in public relations from the School of Media and
+                    Journalism. In the years following graduation, I worked in digital marketing, communications,
+                    and technology. Currently, I work at IBM as an Offering Manager and I'm earning a certification 
+                    in web development from UNC-Chapel Hill.</p>
+                <br>
+                <p>When I'm not in class or at work, I'm usually with friends at a local brewery or reading a book. Being
+                    relatively new to Raleigh, I still have a lot of places to see and explore. I live with my cat Luna
+                    near PNC Arena. Neither of us are big fans of hockey or the traffic that comes with it. When we're home, Luna
+                    prefers lying in the sunlight while I prefer watching soccer.</p>
+            </div>
+            <div class="col">
+                <p class="facts">THINGS ABOUT ME
+                    <ul style="list-style-type:square">
+                        <li>I've never left the East Coast except for a business trip to
+                            Bucharest, Romania, earlier this year</li>
+                        <li>I'm a three-time champion of Parks & Recreation trivia</li>
+                        <li>I can wiggle my ears</li>
+                </p>
+                </ul>
+            </div>
+
+
+
+</body>
+
+</html>
