changed pic and copy

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="coffee_shop.jpg" class="img-fluid" alt="responsive-image">
+                <img src="eou-pic2.jpg" class="img-fluid" alt="responsive-image">
             </div>
             <div class="col-6">
                 <p>I'm Hannah and I live in Raleigh, NC. I graduated from the University of North Carolina at Chapel
                     Hill in 2016. I earned a Bachelor of Arts in public relations from the School of Media and
                     Journalism. In the years following graduation, I worked in digital marketing, communications,
-                    and technology. Currently, I work at IBM as an Offering Manager and I'm earning a certification 
+                    and technology. Currently, I work at IBM as an Offering Manager for IBM Z and I'm earning a certification 
                     in web development from UNC-Chapel Hill.</p>
                 <br>
                 <p>When I'm not in class or at work, I'm usually with friends at a local brewery or reading a book. Being
                     relatively new to Raleigh, I still have a lot of places to see and explore. I live with my cat Luna
                     near PNC Arena. Neither of us are big fans of hockey or the traffic that comes with it. When we're home, Luna
-                    prefers lying in the sunlight while I prefer watching soccer.</p>
+                    prefers lying in the sunlight while I prefer watching Netflix or online shopping.</p>
             </div>
             <div class="col">
                 <p class="facts">THINGS ABOUT ME
