--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
                     prefers lying in the sunlight while I prefer watching Netflix or online shopping.</p>
             </div>
             <div class="col">
-                <p class="facts">THINGS ABOUT ME
+                <p class="facts">get social with me
                     <ul style="list-style-type:square">
-                        <li>I've never left the East Coast except for a business trip to
-                            Bucharest, Romania, earlier this year</li>
-                        <li>I'm a three-time champion of Parks & Recreation trivia</li>
-                        <li>I can wiggle my ears</li>
+                        <li><a href="https://www.linkedin.com/in/hannaheshaw/">LinkedIn</a></li>
+                        <li><a href="shawhannahe@gmail.com">Email</a></li>
+                        <li><a href="https://github.com/shawhannah">GitHub</a></li>
                 </p>
                 </ul>
             </div>
