--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     in web development from UNC-Chapel Hill.</p>
                 <br>
                 <p>When I'm not in class or at work, I'm usually with friends at a local brewery or reading a book. Being
-                    relatively new to Raleigh, I still have a lot of places to see and explore. I live with my cat Luna
+                    relatively new to Raleigh, I still have a lot of places to explore. I live with my cat Luna
                     near PNC Arena. Neither of us are big fans of hockey or the traffic that comes with it. When we're home, Luna
                     prefers lying in the sunlight while I prefer watching Netflix or online shopping.</p>
             </div>
@@ -64,6 +64,7 @@
                         <li><a href="https://www.linkedin.com/in/hannaheshaw/">LinkedIn</a></li>
                         <li><a href="shawhannahe@gmail.com">Email</a></li>
                         <li><a href="https://github.com/shawhannah">GitHub</a></li>
+                        <li> </li>
                 </p>
                 </ul>
             </div>
