--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <li><a href="https://www.linkedin.com/in/hannaheshaw/">LinkedIn</a></li>
                         <li><a href="shawhannahe@gmail.com">Email</a></li>
                         <li><a href="https://github.com/shawhannah">GitHub</a></li>
-                        <li> </li>
+                        <li><a href="resume-2019.pdf">Resume</a></li>
                 </p>
                 </ul>
             </div>
