--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <body>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4" href="index.html">HANNAH SHAW</h1>
+        <h1 class="display-4" href="index.html">SHAWLET'S WEB</h1>
         <p class="lead"></p>
         <a
           class="info-btn  btn btn-primary btn-md"
