--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
-    <title>Hannah Shaw</title>
+    <title>Shawlet's Web</title>
 </head>
 
 <body>
