updates to portfolio

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                     class="info-btn btn btn-primary btn-md"
                     href="portfolio.html"
                     role="button"
-                    >PORTFOLIO</a
+                    >PORTFOLIO</ax
                   >
                   <a
                     class="info-btn btn btn-primary btn-md"
