--- a/portfolio.html
+++ b/portfolio.html
@@ -49,12 +49,12 @@
       <div class="col-sm-6">
         <div class="card-edu card">
           <div class="card-body">
-            <h5 class="card-title text-left">FALL HANGMAN</h5>
+            <h5 class="card-title text-left">FIND FALL FAVORITES</h5>
             <p class="card-text text-left">
               Guess the best words of the season
             </p>
             <a
-              href="https://shawhannah.github.io/word-guess-game/"
+              href="http://www.shawletsweb.com/fall-favorites/"
               class="btn-portfolio btn btn-primary"
               >Play Now</a
             >
@@ -69,7 +69,7 @@
               Test your clicking skills to collect all the bears
             </p>
             <a
-              href="https://shawhannah.github.io/unit-4-game/"
+              href="http://www.shawletsweb.com/grateful-dead/"
               class="btn-portfolio btn-card btn btn-primary"
               >Start Clicking</a
             >
@@ -87,7 +87,7 @@
               See what you know about the best movies ever
             </p>
             <a
-              href="https://shawhannah.github.io/trivia-game/"
+              href="ttp://www.shawletsweb.com/eighties-trivia/"
               class="btn-portfolio btn btn-primary"
               >See More</a
             >
@@ -99,12 +99,30 @@
           <div class="card-body">
             <h5 class="card-title text-left">NBA GIFS GALORE</h5>
             <p class="card-text text-left">
-              Find gifs of the best (and worst) players in the league
+              Find gifs of the best (and worst) players
             </p>
             <a
-              href="https://shawhannah.github.io/giphy-assignment/"
+              href=" http://www.shawletsweb.com/nba-giphy/"
               class="btn-portfolio btn btn-primary"
               >Start Searching</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row-three row">
+      <div class="col-sm-6">
+        <div class="card-free card">
+          <div class="card-body">
+            <h5 class="card-title text-left">CHOO CHOO CALENDAR</h5>
+            <p class="card-text text-left">
+              Schedule your next ride on the tracks
+            </p>
+            <a
+              href="http://www.shawletsweb.com/choo-choo/"
+              class="btn-portfolio btn btn-primary"
+              >See More</a
             >
           </div>
         </div>
