added s in http and changed one url

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
         <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                  <h1 class="display-4" href="index.html">SHAWLET'S WEB</h1>
+                  <h1 class="display-4" href="about.html">SHAWLET'S WEB</h1>
                   <p class="lead"></p>
                   <a
                     class="info-btn btn btn-primary btn-md"
@@ -31,7 +31,7 @@
                   >
                   <a
                     class="info-btn btn btn-primary btn-md"
-                    href="index.html"
+                    href="about.html"
                     role="button"
                     >ABOUT</a
                   >
