--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4" href="index.html">SHAWLET'S WEB</h1>
+        <h1 class="display-4" href="about.html">SHAWLET'S WEB</h1>
         <p class="lead"></p>
         <a
           class="info-btn  btn btn-primary btn-md"
@@ -34,7 +34,7 @@
         >
         <a
           class="info-btn  btn btn-primary btn-md"
-          href="index.html"
+          href="about.html"
           role="button"
           >ABOUT</a
         >
@@ -54,7 +54,7 @@
               Guess the best words of the season
             </p>
             <a
-              href="http://www.shawletsweb.com/fall-favorites/"
+              href="https://www.shawletsweb.com/fall-favorites/"
               class="btn-portfolio btn btn-primary"
               >Play Now</a
             >
@@ -69,7 +69,7 @@
               Test your clicking skills to collect all the bears
             </p>
             <a
-              href="http://www.shawletsweb.com/grateful-dead/"
+              href="https://www.shawletsweb.com/grateful-dead/"
               class="btn-portfolio btn-card btn btn-primary"
               >Start Clicking</a
             >
@@ -87,7 +87,7 @@
               See what you know about the best movies ever
             </p>
             <a
-              href="ttp://www.shawletsweb.com/eighties-trivia/"
+              href="https://www.shawletsweb.com/eighties-trivia/"
               class="btn-portfolio btn btn-primary"
               >See More</a
             >
@@ -102,7 +102,7 @@
               Find gifs of the best (and worst) players
             </p>
             <a
-              href=" http://www.shawletsweb.com/nba-giphy/"
+              href="https://shawhannah.github.io/nba-giphy/"
               class="btn-portfolio btn btn-primary"
               >Start Searching</a
             >
@@ -120,7 +120,7 @@
               Schedule your next ride on the tracks
             </p>
             <a
-              href="http://www.shawletsweb.com/choo-choo/"
+              href="https://www.shawletsweb.com/choo-choo/"
               class="btn-portfolio btn btn-primary"
               >See More</a
             >
