--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
               Guess the best words of the season
             </p>
             <a
-              href="https://www.shawletsweb.com/fall-favorites/"
+              href="https://shawhannah.github.io/fall-favorites/"
               class="btn-portfolio btn btn-primary"
               >Play Now</a
             >
@@ -69,7 +69,7 @@
               Test your clicking skills to collect all the bears
             </p>
             <a
-              href="https://www.shawletsweb.com/grateful-dead/"
+              href="https://shawhannah.github.io/grateful-dead/"
               class="btn-portfolio btn-card btn btn-primary"
               >Start Clicking</a
             >
@@ -87,7 +87,7 @@
               See what you know about the best movies ever
             </p>
             <a
-              href="https://www.shawletsweb.com/eighties-trivia/"
+              href="https://shawhannah.github.io/eighties-trivia/"
               class="btn-portfolio btn btn-primary"
               >See More</a
             >
@@ -120,7 +120,7 @@
               Schedule your next ride on the tracks
             </p>
             <a
-              href="https://www.shawletsweb.com/choo-choo/"
+              href="https://shawhannah.github.io/choo-choo/"
               class="btn-portfolio btn btn-primary"
               >See More</a
             >
