social changes copy changes

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
                 <p>I'm Hannah and I live in Raleigh, NC. I graduated from the University of North Carolina at Chapel
                     Hill in 2016. I earned a Bachelor of Arts in public relations from the School of Media and
                     Journalism. In the years following graduation, I worked in digital marketing, communications,
-                    and technology. Currently, I work at IBM as an Offering Manager for IBM Z and I'm earning a certification 
+                    and technology. Currently, I work at IBM as a Go-To-Market Offering Manager and I'm earning a certification 
                     in web development from UNC-Chapel Hill.</p>
                 <br>
-                <p>When I'm not in class or at work, I'm usually with friends at a local brewery or reading a book. Being
-                    relatively new to Raleigh, I still have a lot of places to explore. I live with my cat Luna
-                    near PNC Arena. Neither of us are big fans of hockey or the traffic that comes with it. When we're home, Luna
-                    prefers lying in the sunlight while I prefer watching Netflix or online shopping.</p>
+                <p>When I'm not in class or at the office, I'm either traveling for work or with friends at a brewery. 
+                    I'm a big fan of local businesses, craft beer, and perpetual exploration.</p>
             </div>
             <div class="col">
-                <p class="facts">get social with me
+                <p class="facts">LET'S BE FRIENDS
                     <ul style="list-style-type:square">
+                            <li><a href="shawhannahe@gmail.com">Email</a></li>
                         <li><a href="https://www.linkedin.com/in/hannaheshaw/">LinkedIn</a></li>
-                        <li><a href="shawhannahe@gmail.com">Email</a></li>
+                        <li><a href="https://www.instagram.com/shawhannahe/">Instagram</a></li>
+                        <li><a href="https://www.twitter.com/shawhannahe/">Twitter</a></li>
                         <li><a href="https://github.com/shawhannah">GitHub</a></li>
                         <li><a href="resume-2019.pdf">Resume</a></li>
                 </p>
