--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                   <h1 class="display-4" href="index.html">SHAWLET'S WEB</h1>
-                  <p class="lead"></p>
+                  <p class="lead">Raleigh, NC || Tech & Marketing || Feminist || Tar Heel </p>
                   <a
                     class="info-btn btn btn-primary btn-md"
                     href="contact.html"
