first updates to portfolio

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <hr>
     <br>
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <img src="eou-pic2.jpg" class="img-fluid" alt="responsive-image">
+        <div class="row-one row">
+            <div class="col-2">
+                <img src="eou-pic2.jpg" class="pic1 img-fluid" alt="responsive-image">
             </div>
             <div class="col-6">
                 <p>I'm Hannah and I live in Raleigh, NC. I graduated from the University of North Carolina at Chapel
@@ -56,7 +56,7 @@
                 <p>When I'm not in class or at the office, I'm either traveling for work or with friends at a brewery. 
                     I'm a big fan of local businesses, craft beer, and perpetual exploration.</p>
             </div>
-            <div class="col">
+            <div class="col-2">
                 <p class="facts">LET'S BE FRIENDS
                     <ul style="list-style-type:square">
                             <li><a href="shawhannahe@gmail.com">Email</a></li>
@@ -67,6 +67,13 @@
                         <li><a href="resume-2019.pdf">Resume</a></li>
                 </p>
                 </ul>
+            </div>
+            <div class="row-two row">
+                <div class="col-2">
+                    <img src="eou-pic3.jpg" class="pic1 img-fluid" alt="responsive-image">
+                </div>
+                <div class="col-6"></div>
+                <div class="col-2"></div>
             </div>
 
 
