--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
             <a
               href="https://shawhannah.github.io/eighties-trivia/"
               class="btn-portfolio btn btn-primary"
-              >See More</a
+              >Bring It</a
             >
           </div>
         </div>
@@ -113,7 +113,7 @@
 
     <div class="row-three row">
       <div class="col-sm-6">
-        <div class="card-free card">
+        <div class="card-choo card">
           <div class="card-body">
             <h5 class="card-title text-left">CHOO CHOO CALENDAR</h5>
             <p class="card-text text-left">
@@ -123,6 +123,22 @@
               href="https://shawhannah.github.io/choo-choo/"
               class="btn-portfolio btn btn-primary"
               >See More</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="card-choo card">
+          <div class="card-body">
+            <h5 class="card-title text-left">myIPA</h5>
+            <p class="card-text text-left">
+              Never forget your favorite IPAs
+            </p>
+            <a
+              href="http://www.shawletsweb.com/project-2/"
+              class="btn-portfolio btn btn-primary"
+              >Save The Beers</a
             >
           </div>
         </div>
