--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 
     <div class="row-one row">
       <div class="col-sm-6">
-        <div class="card-edu card">
+        <div class="card-free card">
           <div class="card-body">
             <h5 class="card-title text-left">FIND FALL FAVORITES</h5>
             <p class="card-text text-left">
@@ -129,7 +129,7 @@
       </div>
 
       <div class="col-sm-6">
-        <div class="card-choo card">
+        <div class="card-web card">
           <div class="card-body">
             <h5 class="card-title text-left">myIPA</h5>
             <p class="card-text text-left">
